fix text not showing while custom font is loaded

--- a/src/fonts/pt_sans.css
+++ b/src/fonts/pt_sans.css
@@ -1,5 +1,6 @@
 @font-face {
     font-family: 'PT Sans';
+    font-display: swap;
     src: url('subset-PTSans-Regular.eot');
     src: local('PT Sans'), local('PTSans-Regular'),
         url('subset-PTSans-Regular.eot?#iefix') format('embedded-opentype'),
@@ -11,6 +12,7 @@
 
 @font-face {
     font-family: 'PT Sans Narrow';
+    font-display: swap;
     src: url('subset-PTSans-Narrow.eot');
     src: local('PT Sans Narrow'), local('PTSans-Narrow'),
         url('subset-PTSans-Narrow.eot?#iefix') format('embedded-opentype'),
@@ -22,6 +24,7 @@
 
 @font-face {
     font-family: 'PT Sans';
+    font-display: swap;
     src: url('subset-PTSans-Bold.eot');
     src: local('PT Sans Bold'), local('PTSans-Bold'),
         url('subset-PTSans-Bold.eot?#iefix') format('embedded-opentype'),
@@ -33,6 +36,7 @@
 
 @font-face {
     font-family: 'PT Sans Narrow';
+    font-display: swap;
     src: url('subset-PTSans-NarrowBold.eot');
     src: local('PT Sans Narrow Bold'), local('PTSans-NarrowBold'),
         url('subset-PTSans-NarrowBold.eot?#iefix') format('embedded-opentype'),
